# Masters_Software

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  SFCCompare.code-workspace  environment.txt  sfcmasters.code-workspace
.github/workflows/: main.yml
SFCCompare/: .gitignore  CMakeLists.txt  README.md
SFCCompare/cmake/: DownloadProject.cmake
SFCCompare/libsfc/: CMakeLists.txt
SFCCompare/libsfc/include/libsfc/: algorithm.h  base2.h  clusters.h  coordinates.h  gray.h  hilbert.h  hilbert_mapping.h  interleave.h  iterator.h  metric.h  metric_bbox.h  metric_clusters.h  metric_ratio.h  morton.h  pow.h  progress_bar.h  range.h  raster.h  sfcurve.h  unsigned.h
SFCCompare/libsfc/tests/: CMakeLists.txt
SFCCompare/libsfc/tests/benchmark_tests/: CMakeLists.txt
SFCCompare/libsfc/tests/benchmark_tests/src/: main.cpp
SFCCompare/libsfc/tests/compiler_features/: CMakeLists.txt
SFCCompare/libsfc/tests/compiler_features/BMI2/: bmi2.cpp
SFCCompare/libsfc/tests/compiler_features/FOLD_EXPRESSIONS/: CMakeLists.txt  fold_expressions.cpp
SFCCompare/libsfc/tests/unit_tests/: CMakeLists.txt
SFCCompare/libsfc/tests/unit_tests/include/: interleave_test.h  libhilbert.h  range_test.h  simple_curve.h
SFCCompare/libsfc/tests/unit_tests/src/: base2.cpp  clusters.cpp  coordinates.cpp  interleave.cpp  iterator.cpp  pow.cpp  range.cpp  sfcurve.cpp
SFCCompare/sfccompare/: CMakeLists.txt
SFCCompare/sfccompare/src/: main.cpp
SFCCompare/sfccompare/tools/: plot_curves.gnuplot
cmake/: DownloadProject.cmake
examples/: compressing_files.md
libsfc/: CMakeLists.txt
libsfc/benchmark/: CMakeLists.txt
libsfc/benchmark/src/: main.cpp  sfc.cpp
libsfc/include/libsfc/: algorithm.h  base2.h  clusters.h  coordinates.h  gray.h  hilbert.h  hilbert_mapping.h  interleave.h  iterator.h  metric.h  metric_clusters.h  metric_gridedges.h  metric_ratio.h  morton.h  pow.h  progress_bar.h  range.h  raster.h  rectangle.h  sfcdef.h  sfcurve.h  unsigned.h
libsfc/tests/: CMakeLists.txt
libsfc/tests/benchmark_tests/: CMakeLists.txt
libsfc/tests/compiler_features/: CMakeLists.txt
libsfc/tests/compiler_features/BMI2/: CMakeLists.txt  bmi2.cpp
libsfc/tests/compiler_features/FOLD_EXPRESSIONS/: fold_expressions.cpp
libsfc/tests/unit_tests/: CMakeLists.txt
libsfc/tests/unit_tests/include/: interleave_test.h  libhilbert.h  pow_test.h  range_test.h  sfcurve_test.h  simple_curve.h
libsfc/tests/unit_tests/src/: base2.cpp  clusters.cpp  coordinates.cpp  interleave.cpp  iterator.cpp  libhilbert.cpp  main.cpp  pow.cpp  range.cpp  rectangle.cpp  sfcurve.cpp
programs/: ANALYSIS.md
results/SKA HDF5/: ska_file_sizes.csv  ska_statistics.csv
results/SRTM30/: srtm30_file_sizes.csv  srtm30_geographical_extents.csv  strm30_statistics.csv
sfccompare/: CMakeLists.txt
sfccompare/src/: main.cpp
sfccompress/: CMakeLists.txt
sfccompress/benchmark/: CMakeLists.txt
sfccompress/benchmark/include/: bittranspose_utils.h
sfccompress/benchmark/src/: bittranspose.cpp  reorder.cpp
sfccompress/include/: bitstream.h  bittranspose.h  bwt.h  compress_handler.h  compressor.h  huffman.h  lz78.h  lzw.h  main.h  mtf.h  reorder.h  rle.h  sfcc.h  sfccexcept.h  utils.h
sfccompress/src/: bitstream.cpp  compressor.cpp  huffman.cpp  lzw.cpp  main.cpp  sfcc.cpp
sfccompress/tests/: CMakeLists.txt
sfccompress/tests/unit_tests/: CMakeLists.txt
sfccompress/tests/unit_tests/data/: test.small.sfcc
sfccompress/tests/unit_tests/include/: compressor_data.h  reorder_test.h
sfccompress/tests/unit_tests/src/: bittranspose.cpp  bwt.cpp  compressor.cpp  lzw.cpp  mtf.cpp  reorder.cpp  sfcc.cpp
tools/: README.md  compress_config.py  compress_normal.sh  geotiff2sfcc.py  gnu_parallel_compress_config.py  hdf52sfcc.py  py_compress_config.py  sfcc_block_entropy.py  sfcc_compress.py  sfcc_du_to_csv.py  sfcc_ignore.py  sfcc_name_to_info.py  sfcc_parallel_to_csv.py  sfcc_process.py  sfcc_stats.py  sfcc_stats_combiner.py  sfccfile.py  sfccinfo.py
